"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

Remove obsolete mapredraw command (empty on server-side).
 common/p_cmd.c
 gnome/map.c
 gtk/config.c map.c
 gtk-v2/src/config.c map.c
 x11/xutil.c
Nicolas Weeger 2007-06-02

Apply patch #1720388: data len in client.c is calculated wrong
 courtesy Jürgen Kahnert.
common/client.c
Nicolas Weeger 2007-05-16

gtk/text.c: fix callback that was eating a word.
Nicolas Weeger 2007-05-03

Change the version string from 1.9.1 to 2.0-dev for trunk.
Alex Schultz 2007-04-28

Implement feature request #1560389: improve inscription logic.
 gtk/gx11.c inventory.c
 common/client.c client.h commands.c item.c item.h proto.h
Nicolas Weeger 2007-04-23

Fix memory overrun errors.
---
gtk/gx11.c: Allocate enough space in pickup_menus/value to store all
   allocated entries.
gtk-v2/src/stats.c: Allocate enough skill boxes to store MAX_SKILL skills.
gtk-v2/src/info.c: Allocate enough memory in info_pane[] to not cause memory
   overruns.
gtk-v2/src/config.c: Allocate enough memory to not cause memory overrun when
   loading gtk rc files.
Andreas Kirschbaum 2007-04-23

autogen.sh: Add script to rebuild autoconf files.
configure, aclocal.m4, */Makefile.in: Rebuilt.
common/Makefile.am: Rewrite commands to build svnversion.h to not generate an
   error message the first time they are run.
configure.in: Remove duplicate use of AC_CONFIG_SRCDIR.
configure.in: Add template comments to AC_DEFINEs. Now autoheader and
   ./configure --enable-maintainer-mode does work again.
---
Andreas Kirschbaum 2007-04-16

Use #include <config.h> instead #include "config.h" to support multiple
configurations outside the source directory.
---
Andreas Kirschbaum 2007-04-16

Rename DATADIR to CF_DATADIR to avoid name clashes when cross-compiling to
Win32.
---
gtk/win32/config.h, configure.in, common/image.c, common/config.h.in,
gnome/gnome.c, gnome/gnome-sound.c, gtk-v2/src/config.c: Replace DATADIR by