@@ -124,13 +124,6 @@ void client_tick(uint32 tick)
     mapdata_animation();
 }
 
-/**
- * We get pickup information from server, update our status.
- */
-void client_pickup(uint32 pickup)
-{
-}
-
 /* Called from disconnect command - that closes the socket -
  * we just need to do the gtk cleanup.
  */
@@ -679,7 +672,7 @@ main (int argc, char *argv[])
     keys_init(window_root);
     stats_init(window_root);
     config_init(window_root);
-
+    pickup_init(window_root);
 
     load_window_positions(window_root);
 
